--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#38615C</color>
+    <color name="colorPrimaryDark">#3F8585</color>
+    <color name="colorAccent">#22A57C</color>
+    <color name="colorValuteItemStart">#38615C</color>
+    <color name="colorValuteItemCenter">#3F8585</color>
+    <color name="colorValuteItemEnd">#22A57C</color>
 </resources>
